add playwright for e2e testing

--- a/frontend-example/jest.config.json
+++ b/frontend-example/jest.config.json
@@ -14,5 +14,8 @@
     "node_modules",
     "<rootDir>/src/index.tsx"
   ],
+  "testPathIgnorePatterns": [
+    "<rootDir>/e2e"
+  ],
   "testEnvironment": "jsdom"
 }
