--- a/frontend-example/package.json
+++ b/frontend-example/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "test": "npx jest --watch"
+    "test": "npx jest --watch",
+    "playwright": "npx playwright test",
+    "playwright:headed": "npx playwright test --headed"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@playwright/test": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
