--- a/frontend-example/jest.config.json
+++ b/frontend-example/jest.config.json
@@ -7,15 +7,8 @@
       "statements": 80
     }
   },
-  "setupFilesAfterEnv": [
-    "<rootDir>/src/setupTests.ts"
-  ],
-  "coveragePathIgnorePatterns": [
-    "node_modules",
-    "<rootDir>/src/index.tsx"
-  ],
-  "testPathIgnorePatterns": [
-    "<rootDir>/e2e"
-  ],
+  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.ts"],
+  "coveragePathIgnorePatterns": ["node_modules", "<rootDir>/src/index.tsx"],
+  "testPathIgnorePatterns": ["<rootDir>/e2e"],
   "testEnvironment": "jsdom"
 }
