--- a/frontend-example/package.json
+++ b/frontend-example/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
     "test": "npx jest --watch",
+    "format": "npx prettier --write .",
     "playwright": "npx playwright test",
     "playwright:headed": "npx playwright test --headed"
   },
@@ -41,6 +42,7 @@
     "node-sass": "^7.0.1",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.5.0",
+    "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
