--- a/frontend-example/package.json
+++ b/frontend-example/package.json
@@ -8,8 +8,8 @@
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
     "test": "npx jest --watch",
     "prettier:format": "npx prettier --write ./src/**/*",
-    "lint": "npx eslint ./src/**/*",
-    "lint:fix": "npx eslint --quiet --fix ./src/**/*",
+    "lint": "npx eslint ./src/",
+    "lint:fix": "npx eslint --quiet --fix ./src/",
     "playwright": "npx playwright test",
     "playwright:headed": "npx playwright test --headed"
   },
@@ -32,6 +32,7 @@
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
@@ -48,17 +49,21 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.13",
+    "postcss-cli": "^9.1.0",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.5.0",
     "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.24",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
