--- a/react-graphql/.eslintrc.json
+++ b/react-graphql/.eslintrc.json
@@ -66,5 +66,6 @@
         "@typescript-eslint/no-empty-function": "warn",
         "react/react-in-jsx-scope": "off",
         "no-underscore-dangle": "off",
-        "import/no-extraneous-dependencies": ["error", {"devDependencies": true, "optionalDependencies": true, "peerDependencies": true}]    }
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true, "optionalDependencies": true, "peerDependencies": true}]    },
+        "react/destructuring-assignment": [true, "always", { "ignoreClassFields": true }]
 }
