--- a/react-graphql/tsconfig.json
+++ b/react-graphql/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": false,
     "jsx": "react-jsx",
     "baseUrl": "src",
-    "sourceMap": true
+    "sourceMap": true,
   },
   "include": ["src"]
 }
